code/kubes/nocodb/k8s/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: nocodb
  annotations:
    linkerd.io/inject: enabled
