code/kubes/nocodb/k8s/nocodb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nocodb
  name: nocodb-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "4096m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nocodb.xinutec.org
    secretName: nocodb-tls
  rules:
  - host: nocodb.xinutec.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nocodb-server
            port:
              number: 8080
